update analysis file

--- a/analysis/02_kids.Rmd
+++ b/analysis/02_kids.Rmd
@@ -23,10 +23,12 @@ library(pwr)
 ```{r data pre-processing}
 
 files <- dir("../../kids_simple_4cat/")
+#files <- dir("../../kids_raw_data/600/")
 
 raw_data <- data_frame()
 for (f in files) {
   jf <- paste("../../kids_simple_4cat/",f,sep="")
+#  jf <- paste("../../kids_raw_data/600/",f,sep="")
   jd <- fromJSON(paste(readLines(jf), collapse=""))
   id <- as_data_frame(jd$data$data)
   raw_data <- bind_rows(raw_data, id)
