analysis code and data for speaker change experiment

--- a/analysis/01_adult_speakerchange_preference.Rmd
+++ b/analysis/01_adult_speakerchange_preference.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "DisCon Speaker Change Adult Analysis"
+title: "DisCon Speaker Change Adult with Preference Analysis"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE) #no code, no warning printed
 library(knitr)
 library(tidyverse)
 library(ggplot2)
@@ -19,11 +20,11 @@ library(langcog)
 ```{r data preprocessing}
 # Data pre-processing
 
-files <- dir("../../adult_600_speakerchange/production-results/")
+files <- dir("../../adult_600_speakerchange_preference/production-results/")
 
 raw_data <- data_frame()
 for (f in files) {
-  jf <- paste("../../adult_600_speakerchange/production-results/",f,sep="")
+  jf <- paste("../../adult_600_speakerchange_preference/production-results/",f,sep="")
   jd <- fromJSON(paste(readLines(jf), collapse=""))
   id <- as_data_frame(jd$answers$data$data) %>%
     mutate(workerid = jd$WorkerId)
@@ -34,9 +35,6 @@ data <- raw_data %>%
   mutate(distribution = as.character(distribution),
          distribution = ifelse(distribution == "2:0", "c(2, 1, 0)", distribution),
          distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)", "c(3, 0, 0)", "c(1, 1, 1)", "c(2, 1, 0)")))
-
-write.csv(data, file="../data/01_adult_speakerchange_preference.data.csv")
-data <- read_csv(file="../data/01_adult_speakerchange_preference.data.csv")
 ```
 
 ```{r}
@@ -123,63 +121,41 @@ scale_colour_solarized(name = "Speaker Change",
 
 
 ```
-```{r wilcoxon test}
-## Wilcoxon tests against chance
-library(exactRankTests)
+#Check how many of the participants choosing correct in the no change condition is affected in the speaker change condition
+```{r plot2}
+pull <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, workerid, speakerChange) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  filter(speakerChange == "same" & correct > 1/3) %>%
+  pull(workerid)
 
-data %>%
-  filter(phase == "test") %>%
-  group_by(distribution, workerid) %>%
-  summarise(correct = mean(correct_target1)) %>%
-  summarise(correct = list(correct)) %>%
-  group_by(distribution) %>%
-  mutate(mean= mean(unlist(correct)),
-         stat = wilcox.exact(unlist(correct), mu = 0.5)$statistic,
-         p = wilcox.exact(unlist(correct), mu = 0.5)$p.value) %>%
-  select(distribution,mean,stat,p) %>%
-  knitr::kable(digits = 3)
-```
+plot2 <- data%>%
+  filter(workerid %in% pull) %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, workerid, speakerChange) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  gather(item, prop_correct, -distribution, -workerid, -speakerChange) %>%
+  group_by(distribution, item, speakerChange) %>%
+  multi_boot_standard(col = "prop_correct")
 
-```{r Bayesian}
-library(brms)
-
-data_inf <- data%>%
-  filter(phase == "test")
-
-prior1 <- get_prior(correct_target1 ~ speakerChange * experiment +
-                      (speakerChange | workerid) + (speakerChange | agent),
-                    data = data_inf, family = bernoulli()) 
-
-# registered  model
-bm1 <- brm(correct_target1 ~ speakerChange * experiment +
-                      (speakerChange | workerid) + (speakerChange | agent),
-                    data = data_inf, family = bernoulli(),
-          control = list(adapt_delta = 0.99),
-          sample_prior = F,
-          save_all_pars = TRUE,
-          prior = prior1,
-          iter = 20000)
-summary(bm1)
-
-prior2 <- get_prior(correct_target1 ~ speakerChange +
-                      (speakerChange | workerid) + (speakerChange | agent),
-                    data = data_inf, family = bernoulli())
-
-bm2 <- brm(correct_target1 ~ speakerChange  +
-                      (speakerChange | workerid) + (speakerChange | agent),
-                    data = data_inf, family = bernoulli(),
-          control = list(adapt_delta = 0.99),
-          sample_prior = F,
-          save_all_pars = TRUE,
-          prior = prior2,
-          iter = 20000)
-summary(bm2)
-
-saveRDS(bm1, "01_adult_speakerchange_preference_models/bm1.rds")
-saveRDS(bm2, "01_adult_speakerchange_preference_models/bm2.rds")
-
-bf_full_null <- bayes_factor(bm1, bm2, log = FALSE, maxiter = 5000)
-
-bf_full_null
+ggplot(plot2,
+       aes(x = item, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  scale_fill_solarized(name = "Chosen item",
+                       breaks = c("correct", "correct2", "correct3"),
+                       labels = c("most frequent", "second most frequent", "least frequent"))+
+  facet_grid(~speakerChange, 
+             labeller = as_labeller(c(change = "speaker change", same = "no change"))) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
+  labs(x="", y= "proportion chosen")
 ```
 
