--- a/analysis/01_study1_adult.Rmd
+++ b/analysis/01_study1_adult.Rmd
@@ -52,7 +52,7 @@ data_low <- raw_data %>%
          distribution = ifelse(distribution == "2:0", "c(2, 1, 0)", distribution),
          distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)", "c(3, 0, 0)", "c(1, 1, 1)", "c(2, 1, 0)")))
 
-write.csv(data_high, file="../data/01_study1_adult_low.data.csv")
+write.csv(data_low, file="../data/01_study1_adult_low.data.csv")
 data_low <- read_csv(file="../data/01_study1_adult_low.data.csv")
 
 ```
