--- a/analysis/02_kids_power_analysis_600.Rmd
+++ b/analysis/02_kids_power_analysis_600.Rmd
@@ -87,3 +87,46 @@ d <- cohensD(power$correct, mu = 1/3)
 
 pwr.t.test(d = d, sig.level = 0.05, power = .8, type = c("one.sample"))
 ```
+
+# Bayesian Power analysis
+
+```{r}
+N           <- 1000  # Number of MC reps
+n           <- 20  # Sample size
+sigma       <- 0.3    # Error standard devation
+
+true_mu     <- (0.5785714-1/3)	  # True value of mu
+
+pri.mn.anal <- 0    # Prior for mu
+pri.sd.anal <- Inf
+
+
+ L <- rep(0,N)
+ U <- rep(0,N)
+
+ set.seed(0820)
+
+ for(rep in 1:N){
+
+  #Generate data:
+    Y  <- rnorm(n,true_mu,sigma)
+
+   #Compute posterior 95% interval:
+    post.var <- 1/(n/sigma^2+1/pri.sd.anal^2)
+    post.mn  <- post.var*(pri.mn.anal/pri.sd.anal^2+sum(Y)/sigma^2)
+    L[rep]   <- post.mn-1.96*sqrt(post.var)
+    U[rep]   <- post.mn+1.96*sqrt(post.var)
+ }
+ 
+ 
+plot(NA,xlim=c(-1,1),ylim=c(1,N),xlab="95% interval",ylab="Replication")
+abline(v=0)
+
+for(rep in 1:N){
+    reject <- L[rep]>0 | U[rep]<0
+    lines(c(L[rep],U[rep]),c(rep,rep),col=ifelse(reject>0,2,1))
+}
+
+
+ mean(L>0 | U<0)
+```
