--- a/analysis/02_kids_600.Rmd
+++ b/analysis/02_kids_600.Rmd
@@ -79,7 +79,7 @@ data <- left_join(raw_data,log, by = "subid")%>%
 
 #write.csv(data, file="../data/kids_600.data.csv")
 
-#data <- read_csv(file="../data/kids_600.data.csv")
+data <- read_csv(file="../data/kids_600.data.csv")
 ```
 
 ```{r sanity checks}
@@ -174,11 +174,11 @@ ggplot() +
   geom_jitter(data = p3, aes(x = subage, y = correct, col = subage, alpha = .2),width = .2,height = .01)+
   geom_pointrange(data = p4, aes(x = subage, y = mean, col = subage, ymin = ci_lower, ymax = ci_upper),size = .8)+
   geom_hline(yintercept = 1/3, lty=2)+
-  labs(x="",y="Proportion correct in training")+
+  labs(x="",y="Proportion correct")+
   theme_few() +
   ylim(-0.05,1.05)+
   guides(alpha = F)+
-  scale_color_solarized()
+  scale_color_solarized(name = "Age")
 ```
 
 Proportion correct choice by age continous
@@ -190,10 +190,10 @@ p5 <- data %>%
   summarise(correct = mean(correct_target1)) 
 
 ggplot(data = p5, aes(x = age_num, y = correct)) +
-  geom_jitter(width = .01,height = .01, alpha = .5)+
-  geom_smooth(method = "lm",  se = T,  alpha = .5, size = .6, span = 2)+
+  geom_jitter(width = .01, height = .0, alpha = .5)+
+  geom_smooth(method = "lm",  se = T,  alpha = .5, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
   geom_hline(yintercept = 1/3, lty=2)+
-  labs(x="Age",y="Proportion correct choice")+
+  labs(x="Age",y="Proportion correct")+
   theme_few() +
   ylim(-0.05,1.05)+
   xlim(3,5)+
@@ -245,7 +245,7 @@ plot_post <- data %>%
   summarise(correct = mean(correct_target1))%>%
   summarise(correct = list(correct)) %>%
   group_by(subage) %>%
-  mutate(posterior = list((ttestBF(unlist(correct), mu = 1/3, posterior = T, iterations = 10000)[,"mu"])))%>%
+  mutate(posterior = list((ttestBF(unlist(correct), mu = 1/3, posterior = T, iterations = 1000)[,"mu"])))%>%
   select(-correct)
 
 
@@ -257,7 +257,7 @@ plot_dens_ci <- plot_post %>%
 #### make density plot ?
 
 plot_dens <- data_frame(
-  age = rep(c(3,4), each = 10000),
+  age = rep(c(3,4), each = 1000),
   posterior = c(unlist(plot_post%>%filter(subage == "3") %>% pull(posterior)),unlist(plot_post%>%filter(subage == "4") %>% pull(posterior)))
 )
 
