--- a/analysis/02_kids_600.Rmd
+++ b/analysis/02_kids_600.Rmd
@@ -155,7 +155,7 @@ ggplot() +
   geom_jitter(data = p1, aes(x = experiment, y = correct,  alpha = .2),width = .2,height = .01)+
   geom_pointrange(data = p2, aes(x = experiment, y = mean,  ymin = ci_lower, ymax = ci_upper),size = .8)+
   geom_hline(yintercept = 1/3, lty=2)+
-  labs(x="",y="Proportion correct in training")+
+  labs(x="",y="Proportion correct")+
   theme_few() +
   ylim(-0.05,1.05)+
   guides(alpha = F)+
@@ -223,7 +223,7 @@ data %>%
 
 ```
 
-# BAyesian t-test by age group
+# Bayesian t-test by age group
 
 ```{r}
 ## one sample bayesian t-tests
@@ -300,6 +300,35 @@ ggplot(plot_dens, aes(posterior, group = factor(age))) +
 
 ```
 
+# Comparison to chance based on model
+
+```{r}
+chance_data <- data %>%
+  filter(phase != "training") %>%
+  group_by(subage,subid) %>%
+  summarise(correct = mean(correct_target1)) %>%
+  mutate(comp_chance= ifelse(correct<1/3,0,1))
+
+library(brms)
+
+
+chance_model <- brm(comp_chance ~ 1,
+                    data = chance_data, family = bernoulli(),
+          control = list(adapt_delta = 0.95),
+          sample_prior = F,
+          save_all_pars = TRUE,
+          iter = 2000)
+
+summary(chance_model)
+
+
+```
+
+```{r}
+bayesplot::mcmc_areas(as.array(chance_model), pars = c("b_Intercept"), prob = 0.95)+
+  geom_vline(xintercept = 0, lty = 2, col = "black")+
+  theme_few()
+```
 
 
 # Model 
@@ -307,7 +336,7 @@ ggplot(plot_dens, aes(posterior, group = factor(age))) +
 library(brms)
 
 model_data <- data%>%
-  filter(phase == "test")%>%
+  filter(phase != "training")%>%
   mutate(age_num = scale(age_num))
 
 
@@ -365,6 +394,66 @@ data_frame(
   kable(digits = 2)
 ```
 
+# Check category, position and trial
+
+## category effects
+```{r proportion of choices}
+cat_plot <- data %>%
+  filter(phase == 'test')%>%
+  group_by(target1,subid) %>%
+  summarise(correct = mean(correct_target1)) 
+
+cat_plot_mean <- cat_plot %>%
+  group_by(target1) %>%
+  multi_boot_standard(col = "correct")
 
 
+ggplot() +
+  geom_jitter(data = cat_plot, aes(x = target1, y = correct,  alpha = .2, col = target1),width = .2,height = .01)+
+  geom_pointrange(data = cat_plot_mean, aes(x = target1, y = mean,  ymin = ci_lower, ymax = ci_upper, col = target1),size = .8)+
+  geom_hline(yintercept = 1/3, lty=2)+
+  labs(x="",y="Proportion correct")+
+  theme_few() +
+  ylim(-0.05,1.05)+
+  guides(alpha = F)+
+  scale_color_solarized()
+```
 
+## position effects
+```{r proportion of choices}
+pos_plot <- data %>%
+  filter(phase == 'test')%>%
+  group_by(pickPos,subid) %>%
+  summarise(correct = mean(correct_target1)) 
+
+pos_plot_mean <- pos_plot %>%
+  group_by(pickPos) %>%
+  multi_boot_standard(col = "correct")
+
+
+ggplot() +
+  geom_jitter(data = pos_plot, aes(x = pickPos, y = correct,  alpha = .2, col = pickPos),width = .2,height = .01)+
+  geom_pointrange(data = pos_plot_mean, aes(x = pickPos, y = mean,  ymin = ci_lower, ymax = ci_upper, col = pickPos),size = .8)+
+  geom_hline(yintercept = 1/3, lty=2)+
+  labs(x="",y="Proportion correct")+
+  theme_few() +
+  ylim(-0.05,1.05)+
+  guides(alpha = F)+
+  scale_color_solarized()
+```
+
+## trial effects
+```{r proportion of choices}
+trial_plot <- data %>%
+  filter(phase == 'test')
+
+ggplot(data = trial_plot, aes(x = trial, y = correct_target1)) +
+  geom_jitter(alpha = .2,width = .2,height = .01)+
+  geom_smooth(method = "loess",  se = T, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
+  geom_hline(yintercept = 1/3, lty=2)+
+  labs(x="",y="Proportion correct")+
+  theme_few() +
+  ylim(-0.05,1.05)+
+  guides(alpha = F)+
+  scale_color_solarized()
+```
