--- a/analysis/02_kids_6v1.Rmd
+++ b/analysis/02_kids_6v1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DisCon Children 6 exposure trials"
+title: "DisCon Children 6 vs. 1 exposure trials"
 output: html_document
   code_folding: hide
 ---
@@ -44,12 +44,12 @@ hdi_lower<- function(s){
 ```{r data pre-processing, include = F}
 
 #files <- dir("../../kids_simple_4cat/")
-files <- dir("../../kids_raw_data/600/")
+files <- dir("../../kids_raw_data/6v1/")
 
 raw_data <- data_frame()
 for (f in files) {
 #  jf <- paste("../../kids_simple_4cat/",f,sep="")
-  jf <- paste("../../kids_raw_data/600/",f,sep="")
+  jf <- paste("../../kids_raw_data/6v1/",f,sep="")
   jd <- fromJSON(paste(readLines(jf), collapse=""))
   date <- str_sub(jf,36,str_length(jf)-11)
   id <- as_data_frame(jd$data$data)%>% mutate(test_date = date)
@@ -62,7 +62,7 @@ for (f in files) {
 # linking the data to the demographics spreadsheet
 # always check if subjects get "lost" due do differetn subids
 log <- read_excel("../../DisCon-subject_log.xlsx", 1)%>%
-  filter(Condition == "d600")%>%
+  filter(Condition == "d6v1")%>%
   mutate(dob = as.numeric(dob),
          dob = as.Date(dob,origin = "1899-12-30"))%>%
   select(subid,experimenter,keep_drop,sex,dob)
@@ -72,9 +72,9 @@ log <- read_excel("../../DisCon-subject_log.xlsx", 1)%>%
 data <- left_join(raw_data,log, by = "subid")%>%
   filter(keep_drop == "keep")%>%
   mutate(distribution = as.character(distribution),
-         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)")),
          age_num = lubridate::time_length(difftime(test_date,dob), "years"),
-         check_age = ifelse(substr(age_num,1,1) == subage, T, F))%>%
+         check_age = ifelse(substr(age_num,1,1) == subage, T, F), 
+         distribution = ifelse(distribution == "c(6, 0, 0)", "6-0-0","1-0-0"))%>%
   select(-dob, -check_age,-keep_drop,-experimenter,-test_date,-numberOfTrials,-nunberOfTrials)
 
 #unique(data$subid)
@@ -142,18 +142,18 @@ ggplot() +
 ```{r proportion of choices}
 p1 <- data %>%
   filter(phase == 'test')%>%
-  group_by(experiment,subid) %>%
+  group_by(distribution,subid) %>%
   summarise(correct = mean(correct_target1),
             sd = sd(correct_target1)) 
 
 p2 <- p1 %>%
-  group_by(experiment) %>%
+  group_by(distribution) %>%
   multi_boot_standard(col = "correct")
 
 
 ggplot() +
-  geom_jitter(data = p1, aes(x = experiment, y = correct,  alpha = .2),width = .2,height = .01)+
-  geom_pointrange(data = p2, aes(x = experiment, y = mean,  ymin = ci_lower, ymax = ci_upper),size = .8)+
+  geom_jitter(data = p1, aes(x = distribution, y = correct, col = distribution), alpha = .2 ,width = .2,height = .01)+
+  geom_pointrange(data = p2, aes(x = distribution, y = mean,  ymin = ci_lower, ymax = ci_upper, col = distribution),size = .8)+
   geom_hline(yintercept = 1/3, lty=2)+
   labs(x="",y="Proportion correct")+
   theme_few() +
@@ -161,175 +161,6 @@ ggplot() +
   guides(alpha = F)+
   scale_color_solarized()
 ```
-
-# Proportion correct choice in test trials by age bin
-
-```{r proportion of choices}
-p3 <- data %>%
-  filter(phase == 'test')%>%
-  group_by(subage, subid) %>%
-  summarise(correct = mean(correct_target1)) 
-
-p4 <- p3 %>%
-  group_by(subage) %>%
-  multi_boot_standard(col = "correct")
-
-
-ggplot() +
-  geom_jitter(data = p3, aes(x = subage, y = correct, col = subage, alpha = .2),width = .2,height = .01)+
-  geom_pointrange(data = p4, aes(x = subage, y = mean, col = subage, ymin = ci_lower, ymax = ci_upper),size = .8)+
-  geom_hline(yintercept = 1/3, lty=2)+
-  labs(x="",y="Proportion correct")+
-  theme_few() +
-  ylim(-0.05,1.05)+
-  guides(alpha = F)+
-  scale_color_solarized(name = "Age")
-```
-
-Proportion correct choice by age continous
-
-```{r}
-p5 <- data %>%
-  filter(phase == 'test')%>%
-  group_by(age_num, subid) %>%
-  summarise(correct = mean(correct_target1)) 
-
-ggplot(data = p5, aes(x = age_num, y = correct)) +
-  geom_jitter(width = .01, height = .0, alpha = .5)+
-  geom_smooth(method = "lm",  se = T,  alpha = .5, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
-  geom_hline(yintercept = 1/3, lty=2)+
-  labs(x="Age",y="Proportion correct")+
-  theme_few() +
-  ylim(-0.05,1.05)+
-  xlim(3,5)+
-  guides(alpha = F)
-```
-
-# Bayesian t-test against chance across age groups
-
-```{r}
-## one sample bayesian t-tests
-library(BayesFactor)
-
-data %>%
-  filter(phase != "training") %>%
-  group_by(subid) %>%
-  summarise(correct = mean(correct_target1)) %>%
-  summarise(correct = list(correct)) %>%
-  mutate(mean= mean(unlist(correct)),
-         bf = extractBF(ttestBF(unlist(correct), mu = 1/3))$bf) %>%
-  select(mean,bf) %>%
-  knitr::kable(digits = 3)
-
-```
-
-# Bayesian t-test by age group
-
-```{r}
-## one sample bayesian t-tests
-library(BayesFactor)
-
-data %>%
-  filter(phase != "training") %>%
-  group_by(subage,subid) %>%
-  summarise(correct = mean(correct_target1)) %>%
-  summarise(correct = list(correct)) %>%
-  group_by(subage) %>%
-  mutate(mean= mean(unlist(correct)),
-         bf = extractBF(ttestBF(unlist(correct), mu = 1/3))$bf) %>%
-  select(subage,mean,bf) %>%
-  knitr::kable(digits = 3)
-
-```
-Plotting posterior based on t-test
-
-```{r}
-plot_post <- data %>%
-  filter(phase != "training") %>%
-  group_by(subage,subid) %>%
-  summarise(correct = mean(correct_target1))%>%
-  summarise(correct = list(correct)) %>%
-  group_by(subage) %>%
-  mutate(posterior = list((ttestBF(unlist(correct), mu = 1/3, posterior = T, iterations = 1000)[,"mu"])))%>%
-  select(-correct)
-
-
-plot_dens_ci <- plot_post %>%
-  summarise(mode = estimate_mode(unlist(posterior)),
-            lci = hdi_lower(unlist(posterior)),
-            uci = hdi_upper(unlist(posterior)))
-
-#### make density plot ?
-
-plot_dens <- data_frame(
-  age = rep(c(3,4), each = 1000),
-  posterior = c(unlist(plot_post%>%filter(subage == "3") %>% pull(posterior)),unlist(plot_post%>%filter(subage == "4") %>% pull(posterior)))
-)
-
-densities <- plot_dens %>%
-  group_by(age) %>%
-  do(., dens = density(.$posterior))
-
-densities_df <-
-  data.frame(
-    age = c(rep('3', 512),
-              rep('4', 512)),
-    x = c(densities$dens[[1]]$x, 
-          densities$dens[[2]]$x),
-    y = c(densities$dens[[1]]$y,
-          densities$dens[[2]]$y)
-  ) %>%
-  group_by(age)%>%
-  mutate (
-    ci_shade = ifelse( age == "3",
-      ifelse( x <= plot_dens_ci%>%filter(subage == "3")%>%pull(lci) | x >= plot_dens_ci%>%filter(subage == "3")%>%pull(uci), "OFF", "ON"), ifelse( x <= plot_dens_ci%>%filter(subage == "4")%>%pull(lci) | x >= plot_dens_ci%>%filter(subage == "4")%>%pull(uci), "OFF", "ON")))
-
-
-ggplot(plot_dens, aes(posterior, group = factor(age))) +
-  geom_density(alpha = .5)+
-  geom_vline(xintercept = 1/3, lty=2)+
-  geom_area(data = densities_df %>% filter(ci_shade == "ON"), aes(x = x, y = y, fill = age), alpha = .5) + 
-  labs(x="Proportion Correct")+
-  theme_few() +
-  xlim(-0.05,1.05)+
-  guides(alpha = F)+
-  scale_fill_solarized(name = "Age")+
-  theme(axis.title.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.text.y = element_blank())
-
-```
-
-# Comparison to chance based on model
-
-```{r}
-chance_data <- data %>%
-  filter(phase != "training") %>%
-  group_by(subage,subid) %>%
-  summarise(correct = mean(correct_target1)) %>%
-  mutate(comp_chance= ifelse(correct<1/3,0,1))
-
-library(brms)
-
-
-chance_model <- brm(comp_chance ~ 1,
-                    data = chance_data, family = bernoulli(),
-          control = list(adapt_delta = 0.95),
-          sample_prior = F,
-          save_all_pars = TRUE,
-          iter = 2000)
-
-summary(chance_model)
-
-
-```
-
-```{r}
-bayesplot::mcmc_areas(as.array(chance_model), pars = c("b_Intercept"), prob = 0.95)+
-  geom_vline(xintercept = 0, lty = 2, col = "black")+
-  theme_few()
-```
-
 
 # Model 
 ```{r, include = F}
@@ -339,11 +170,10 @@ model_data <- data%>%
   filter(phase != "training")%>%
   mutate(age_num = scale(age_num))
 
-
 #   model
 
-kbm1 <- brm(correct_target1 ~ age_num +
-                      (1| subid) + (1 | target1),
+kbm1 <- brm(correct_target1 ~ age_num * distribution
+                      (condition| subid) + (condition | target1),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.95),
           sample_prior = F,
@@ -360,8 +190,8 @@ bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num"), prob
 ```
 
 ```{r, include = F}
-kbm2 <- brm(correct_target1 ~ 1 +
-                      (1| subid) + (1 | target1),
+kbm2 <- brm(correct_target1 ~ age_num +
+                      (condition| subid) + (condition | target1),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.95),
           sample_prior = F,
@@ -430,7 +260,7 @@ pos_plot <- data %>%
 
 ggplot() +
   geom_pointrange(data = pos_plot, aes(x = pickPos, y = mean,  ymin = ci_lower, ymax = ci_upper),size = .8)+
-  labs(x="Item position",y="Mean item in this position chosen at test")+
+   labs(x="Item position",y="Mean item in this position chosen at test")+
   theme_few() +
   ylim(0,4)+
   guides(alpha = F)+
