--- a/analysis/02_kids_pilot.Rmd
+++ b/analysis/02_kids_pilot.Rmd
@@ -255,3 +255,82 @@ cohensD(power$correct, mu = 1/3)
 
 pwr.t.test(d = 0.5127475, sig.level = 0.05, power = .8, type = c("one.sample"))
 ```
+
+# 2yo in 600
+
+```{r data pre-processing, include = F}
+
+#files <- dir("../../kids_simple_4cat/")
+files <- dir("../../kids_raw_data/pilot/600/")
+
+raw_data <- data_frame()
+for (f in files) {
+#  jf <- paste("../../kids_simple_4cat/",f,sep="")
+  jf <- paste("../../kids_raw_data/pilot/600/",f,sep="")
+  jd <- fromJSON(paste(readLines(jf), collapse=""))
+  date <- str_sub(jf,36,str_length(jf)-11)
+  id <- as_data_frame(jd$data$data)%>% mutate(test_date = date)
+  raw_data <- bind_rows(raw_data, id)
+}
+
+
+```
+
+
+```{r proportion of choices}
+pos_plot <- raw_data %>%
+  filter(phase == 'test')%>%
+  group_by(pickPos,subid) %>%
+  summarise(n = n())
+
+
+pos_plot2 <- pos_plot%>%
+  group_by(pickPos)%>%
+  multi_boot_standard(col = "n")
+
+ggplot() +
+  geom_jitter(data = pos_plot, aes(x = pickPos, y = n, col = subid),size = 2, height = 0, alpha = 1)+
+  geom_hline(yintercept = 4/3, lty=2)+
+  geom_pointrange(data = pos_plot2, aes(x = pickPos, y = mean,  ymin = ci_lower, ymax = ci_upper),size = .8)+
+  labs(x="Item position",y="Mean number of times item was chosen")+
+  theme_few() +
+  ylim(0,4)+
+  guides(alpha = F)+
+  scale_color_ptol()
+```
+
+```{r}
+p1 <- raw_data %>%
+  filter(phase == 'test')%>%
+  group_by(experiment,subid) %>%
+  summarise(correct = mean(correct_target1)) 
+
+p2 <- p1 %>%
+  group_by(experiment) %>%
+  multi_boot_standard(col = "correct")
+
+
+ggplot() +
+  geom_jitter(data = p1, aes(x = experiment, y = correct,  alpha = .2),width = .2,height = .01)+
+  geom_pointrange(data = p2, aes(x = experiment, y = mean,  ymin = ci_lower, ymax = ci_upper),size = .8)+
+  geom_hline(yintercept = 1/3, lty=2)+
+  labs(x="",y="Proportion correct")+
+  theme_few() +
+  ylim(-0.05,1.05)+
+  guides(alpha = F)+
+  scale_color_solarized()
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
