--- a/analysis/02_kids_6v1.Rmd
+++ b/analysis/02_kids_6v1.Rmd
@@ -44,20 +44,22 @@ hdi_lower<- function(s){
 ```{r data pre-processing, include = F}
 
 #files <- dir("../../kids_simple_4cat/")
-files <- dir("../../kids_raw_data/6v1/")
+files <- dir("../../kids_raw_data/test/")
 
 raw_data <- data_frame()
 for (f in files) {
 #  jf <- paste("../../kids_simple_4cat/",f,sep="")
-  jf <- paste("../../kids_raw_data/6v1/",f,sep="")
+  jf <- paste("../../kids_raw_data/test/",f,sep="")
   jd <- fromJSON(paste(readLines(jf), collapse=""))
-  date <- str_sub(jf,36,str_length(jf)-11)
+  date <- str_sub(jf,37,str_length(jf)-11)
   id <- as_data_frame(jd$data$data)%>% mutate(test_date = date)
   raw_data <- bind_rows(raw_data, id)
 }
 
-#unique(raw_data$subid)
+unique(raw_data$subid)
 
+raw_data <- raw_data %>%
+  mutate(subage = ifelse(subid == "190313_2_d6v1","4",subage))
 
 # linking the data to the demographics spreadsheet
 # always check if subjects get "lost" due do differetn subids
@@ -67,6 +69,13 @@ log <- read_excel("../../DisCon-subject_log.xlsx", 1)%>%
          dob = as.Date(dob,origin = "1899-12-30"))%>%
   select(subid,experimenter,keep_drop,sex,dob)
 
+
+raw_data%>%
+  filter(experiment =="distribution_kids_simple_within")%>%
+  group_by(subid)%>%
+  summarise(n())%>%
+  filter(!(subid %in% unique(log$subid)))
+
 #unique(log$subid)
 
 data <- left_join(raw_data,log, by = "subid")%>%
@@ -75,7 +84,7 @@ data <- left_join(raw_data,log, by = "subid")%>%
          age_num = lubridate::time_length(difftime(test_date,dob), "years"),
          check_age = ifelse(substr(age_num,1,1) == subage, T, F), 
          distribution = ifelse(distribution == "c(6, 0, 0)", "6-0-0","1-0-0"))%>%
-  select(-dob, -check_age,-keep_drop,-experimenter,-test_date,-numberOfTrials,-nunberOfTrials)
+  select(-dob, check_age,-keep_drop,-experimenter,-test_date,-numberOfTrials,-nunberOfTrials)
 
 #unique(data$subid)
 
@@ -107,12 +116,10 @@ data <- data %>%
 ```{r}
 data %>%
   group_by(subage
-           #,sex
            )%>%
   summarise(n = length(unique(subid)))%>%
   knitr::kable(digits = 2)
 ```
-
 
 # Proportion correct choice in training trials
 
@@ -129,7 +136,7 @@ pt2 <- pt1 %>%
 ggplot() +
   geom_jitter(data = pt1, aes(x = subage, y = correct, col = subage, alpha = .2),width = .1,height = .0)+
   geom_pointrange(data = pt2, aes(x = subage, y = mean, col = subage, ymin = ci_lower, ymax = ci_upper),size = .8)+
-  geom_hline(yintercept = 5/6, lty=2)+
+  geom_hline(yintercept = 1/3, lty=2)+
   labs(x="",y="Proportion correct in training")+
   theme_few() +
   ylim(-0.05,1.05)+
@@ -142,24 +149,45 @@ ggplot() +
 ```{r proportion of choices}
 p1 <- data %>%
   filter(phase == 'test')%>%
-  group_by(distribution,subid) %>%
+  group_by(subage, distribution,subid) %>%
   summarise(correct = mean(correct_target1),
             sd = sd(correct_target1)) 
 
 p2 <- p1 %>%
-  group_by(distribution) %>%
+  group_by(subage,distribution) %>%
   multi_boot_standard(col = "correct")
 
 
 ggplot() +
-  geom_jitter(data = p1, aes(x = distribution, y = correct, col = distribution), alpha = .2 ,width = .2,height = .01)+
-  geom_pointrange(data = p2, aes(x = distribution, y = mean,  ymin = ci_lower, ymax = ci_upper, col = distribution),size = .8)+
+  geom_jitter(data = p1, aes(x = distribution, y = correct, col = subage), alpha = .2 ,width = .2,height = .01)+
+  geom_pointrange(data = p2, aes(x = distribution, y = mean,  ymin = ci_lower, ymax = ci_upper, col = subage),size = .8, position = position_dodge(width = .5))+
   geom_hline(yintercept = 1/3, lty=2)+
   labs(x="",y="Proportion correct")+
   theme_few() +
   ylim(-0.05,1.05)+
   guides(alpha = F)+
   scale_color_solarized()
+```
+
+# Proportion correct choice by age continous
+
+```{r}
+p5 <- data %>%
+  filter(phase == 'test')%>%
+  group_by(distribution,age_num, subid) %>%
+  summarise(correct = mean(correct_target1)) 
+
+ggplot(data = p5, aes(x = age_num, y = correct, col = distribution,fill = distribution)) +
+  geom_jitter(width = .01, height = .0, alpha = .5)+
+  geom_smooth(method = "lm",  se = T,  alpha = .5, size = 1, alpha = .5 )+
+  geom_hline(yintercept = 1/3, lty=2)+
+  labs(x="Age",y="Proportion correct")+
+  theme_few() +
+  ylim(-0.05,1.05)+
+  xlim(3,5)+
+  guides(alpha = F)+
+  scale_color_ptol()+
+  scale_fill_ptol()
 ```
 
 # Model 
@@ -172,8 +200,8 @@ model_data <- data%>%
 
 #   model
 
-kbm1 <- brm(correct_target1 ~ age_num * distribution
-                      (condition| subid) + (condition | target1),
+kbm1 <- brm(correct_target1 ~ age_num * distribution +
+                      (distribution| subid) + (distribution | target1),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.95),
           sample_prior = F,
@@ -184,16 +212,16 @@ summary(kbm1)
 ```
 
 ```{r}
-bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num"), prob = 0.95)+
+bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num", "b_distribution6M0M0", "b_age_num:distribution6M0M0"), prob = 0.95)+
   geom_vline(xintercept = 0, lty = 2, col = "black")+
   theme_few()
 ```
 
 ```{r, include = F}
 kbm2 <- brm(correct_target1 ~ age_num +
-                      (condition| subid) + (condition | target1),
+                      (distribution| subid) + (distribution | target1),
                     data = model_data, family = bernoulli(),
-          control = list(adapt_delta = 0.95),
+          control = list(adapt_delta = 0.99),
           sample_prior = F,
           save_all_pars = TRUE,
           iter = 2000)
@@ -205,9 +233,9 @@ summary(kbm2)
 ## Model comparison
 
 ```{r}
-child_waic <- brms::WAIC(kbm1, kbm2, compare = F)
+child_waic <- brms::waic(kbm1, kbm2, compare = F)
 
-child_weights <- model_weights(kbm1, kbm2)
+child_weights <- model_weights(kbm1, kbm2, weights = "waic")
 
 # Bayes Factors (slightly variable)
 bf_full_null <- bayes_factor(kbm1, kbm2, log = FALSE, maxiter = 5000)
@@ -216,9 +244,9 @@ bf_full_null <- bayes_factor(kbm1, kbm2, log = FALSE, maxiter = 5000)
 
 ```{r}
 data_frame(
-  model = c("kbm1_w_age","kbm2"),
-  WAIC = c(child_waic$kbm1$estimates[3,1],child_waic$kbm2$estimates[3,1]),
-  SE = c(child_waic$kbm1$estimates[3,2],child_waic$kbm2$estimates[3,2]),
+  model = c("kbm1_w_condition","kbm2"),
+  WAIC = c(child_waic$loo$kbm1$estimates[3,1],child_waic$loo$kbm2$estimates[3,1]),
+  SE = c(child_waic$loo$kbm1$estimates[3,2],child_waic$loo$kbm2$estimates[3,2]),
   weight = c(child_weights[1],child_weights[2]),
   BF_bm1_bm2 = c(round(bf_full_null$bf,2),"-"))%>%
   kable(digits = 2)
