--- a/analysis/02_kids_600.Rmd
+++ b/analysis/02_kids_600.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "DisCon Children 6 exposure trials"
 output: html_document
-  code_folding: hide
+
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = F, warning = F)
 
 library(tidyverse)
 library(ggplot2)
@@ -17,7 +17,7 @@ library(ggthemes)
 library(langcog)
 library(readxl)
 library(knitr)
-
+library(brms)
 library(lsr)
 library(pwr)
 
@@ -57,14 +57,16 @@ for (f in files) {
 }
 
 raw_data <- raw_data %>%
-  filter(subid != "190402_3_d600")
+  filter(subid != "190402_3_d600")%>%
+  mutate(subage = str_replace(subage," ",""))
 
 #unique(raw_data$subid)
 
 # linking the data to the demographics spreadsheet
 # always check if subjects get "lost" due do differetn subids
 log <- read_excel("../../DisCon-subject_log.xlsx", 1)%>%
-  mutate(subid = ifelse(subid == "190416_4_d6v1","190416_4_d600",subid))%>%
+  mutate(subid = ifelse(subid == "190416_4_d6v1","190416_4_d600",subid),
+         subid = ifelse(subid == "190828_3_d500","190828_3_d600",subid))%>%
   filter(Condition == "d600")%>%
   mutate(dob = as.numeric(dob),
          dob = as.Date(dob,origin = "1899-12-30"))%>%
@@ -87,7 +89,7 @@ data <- left_join(raw_data,log, by = "subid")%>%
          check_age = ifelse(substr(age_num,1,1) == subage, T, F))%>%
   select(-dob, -check_age,-keep_drop,-experimenter,-test_date,-numberOfTrials,-nunberOfTrials)
 
-unique(data$subid)
+#unique(data$subid)
 
 #write.csv(data, file="../data/kids_600.data.csv")
 
@@ -95,7 +97,7 @@ unique(data$subid)
 
 ```
 
-```{r sanity checks}
+```{r sanity checks, include = F}
 # filtering out subjects that perform poorly on training trials
 data %>%
   filter(phase == 'training') %>%
@@ -113,6 +115,26 @@ data <- data %>%
   filter(!subid %in% drop)
 ```
 
+```{r}
+#clean data file for repo
+data_ex1 <- data %>%
+  filter(phase == "test")%>%
+  mutate(correct = ifelse(correct_target1 == "1", 1, 0),
+         target_category = target1, 
+         picked_category = pickCat,
+         experiment = "simple_inference", 
+         id = paste0("part_",as.numeric(as.factor(subid))),
+         id = paste(id, experiment, sep = "_"),
+         speaker = agent,
+         age_group = subage)%>%
+  select(id, age_group,age_num,sex,experiment,trial,speaker,target_category, picked_category,correct)
+
+
+write_csv(data_ex1, path="../data/data_ex1.csv")
+```
+
+
+
 # Participants
 
 ```{r}
@@ -122,6 +144,7 @@ data %>%
            )%>%
   summarise(n = length(unique(subid)))%>%
   knitr::kable(digits = 2)
+
 ```
 
 
@@ -150,7 +173,7 @@ ggplot() +
 
 # Proportion correct choice in test trials across age bins
 
-```{r proportion of choices}
+```{r}
 p1 <- data %>%
   filter(phase == 'test')%>%
   group_by(experiment,subid) %>%
@@ -175,7 +198,7 @@ ggplot() +
 
 # Proportion correct choice in test trials by age bin
 
-```{r proportion of choices}
+```{r}
 p3 <- data %>%
   filter(phase == 'test')%>%
   group_by(subage, subid) %>%
@@ -197,7 +220,7 @@ ggplot() +
   scale_color_solarized(name = "Age")
 ```
 
-Proportion correct choice by age continous
+# Proportion correct choice by age continous
 
 ```{r}
 p5 <- data %>%
@@ -207,7 +230,7 @@ p5 <- data %>%
 
 ggplot(data = p5, aes(x = age_num, y = correct)) +
   geom_jitter(width = .01, height = .0, alpha = .5)+
-  geom_smooth(method = "lm",  se = T,  alpha = .5, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
+  geom_smooth(method = "glm",  se = T,  alpha = .5, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
   geom_hline(yintercept = 1/3, lty=2)+
   labs(x="Age",y="Proportion correct")+
   theme_few() +
@@ -252,9 +275,10 @@ data %>%
   knitr::kable(digits = 3)
 
 ```
-Plotting posterior based on t-test
 
-```{r}
+# Plotting posterior based on t-test
+
+```{r, echo = F}
 plot_post <- data %>%
   filter(phase != "training") %>%
   group_by(subage,subid) %>%
@@ -301,7 +325,7 @@ densities_df <-
       ifelse( x <= plot_dens_ci%>%filter(subage == "4")%>%pull(lci) | x >= plot_dens_ci%>%filter(subage == "4")%>%pull(uci), "OFF", "ON"))))
 
 
-ggplot(plot_dens, aes(posterior, group = factor(age))) +
+post_plot <- ggplot(plot_dens, aes(posterior, group = factor(age))) +
   geom_density(alpha = .5)+
   geom_vline(xintercept = 1/3, lty=2)+
   geom_area(data = densities_df %>% filter(ci_shade == "ON"), aes(x = x, y = y, fill = age), alpha = .5) + 
@@ -309,16 +333,16 @@ ggplot(plot_dens, aes(posterior, group = factor(age))) +
   theme_few() +
   xlim(-0.05,1.05)+
   guides(alpha = F)+
-  scale_fill_solarized(name = "Age")+
+  scale_fill_ptol(name = "Age")+
   theme(axis.title.y = element_blank(),
         axis.ticks.y = element_blank(),
         axis.text.y = element_blank())
 
+
+post_plot
 ```
 
-# Comparison to chance based on model
-
-```{r}
+```{r, include = F, cache = T}
 model_data <- data%>%
   filter(phase != "training")%>%
   mutate(age_num = scale(age_num))
@@ -327,10 +351,14 @@ library(brms)
 
 
 chance_model <- brm(correct_target1 ~ 1 + 
-                      (1| subid) + (age_num | target1),
+                      (1| subid),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.99),
           sample_prior = F,
+          chains = 4, 
+          cores = 4,
+          silent = T, 
+          refresh = 0, 
           save_all_pars = TRUE,
           iter = 2000)
 
@@ -339,7 +367,7 @@ summary(chance_model)
 
 ```
 
-```{r}
+```{r, include = F}
 bayesplot::mcmc_areas(as.array(chance_model), pars = c("b_Intercept"), prob = 0.95)+
   geom_vline(xintercept = 0, lty = 2, col = "black")+
   theme_few()
@@ -347,9 +375,9 @@ bayesplot::mcmc_areas(as.array(chance_model), pars = c("b_Intercept"), prob = 0.
 
 
 # Model 
-```{r, include = F}
-library(brms)
 
+## Model with age
+```{r, cache = T}
 model_data <- data%>%
   filter(phase != "training")%>%
   mutate(age_num = scale(age_num))
@@ -358,15 +386,20 @@ model_data <- data%>%
 #   model
 
 kbm1 <- brm(correct_target1 ~ age_num +
-                      (1| subid) + (age_num | target1),
+                      (1| subid),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.99),
           sample_prior = F,
+          chains = 4, 
+          cores = 4,
           save_all_pars = TRUE,
           iter = 5000)
 
 summary(kbm1)
+
+waic1 <- waic(kbm1)
 ```
+### Plotting model fixed effects
 
 ```{r}
 bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num"), prob = 0.95)+
@@ -374,45 +407,46 @@ bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num"), prob
   theme_few()
 ```
 
-```{r, include = F}
+## Model without age
+
+```{r, cache = T}
 kbm2 <- brm(correct_target1 ~ 1 +
-                      (1| subid) + (age_num | target1),
+                      (1| subid),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.99),
-          sample_prior = F,
+          sample_prior = F, 
+          chains = 4, 
+          cores = 4,
           save_all_pars = TRUE,
           iter = 5000)
 
 summary(kbm2)
-```
 
+waic2 <- waic(kbm2)
+```
 
 ## Model comparison
 
 ```{r}
-child_waic <- brms::WAIC(kbm1, kbm2, compare = F)
-
 child_weights <- model_weights(kbm1, kbm2)
 
 # Bayes Factors (slightly variable)
 bf_full_null <- bayes_factor(kbm1, kbm2, log = FALSE, maxiter = 5000)
 ```
 
-
 ```{r}
 data_frame(
   model = c("kbm1_w_age","kbm2"),
-  WAIC = c(child_waic$kbm1$estimates[3,1],child_waic$kbm2$estimates[3,1]),
-  SE = c(child_waic$kbm1$estimates[3,2],child_waic$kbm2$estimates[3,2]),
+  WAIC = c(child_waic$loos$kbm1$waic,child_waic$loos$kbm2$waic),
+  SE = c(child_waic$loos$kbm1$se_waic,child_waic$loos$kbm2$se_waic),
   weight = c(child_weights[1],child_weights[2]),
   BF_bm1_bm2 = c(round(bf_full_null$bf,2),"-"))%>%
   kable(digits = 2)
+
 ```
 
-# Check category, position and trial
 
-## category effects
-```{r proportion of choices}
+```{r , include = F}
 cat_plot <- data %>%
   filter(phase == 'test')%>%
   group_by(target1,subid) %>%
@@ -434,8 +468,8 @@ ggplot() +
   scale_color_solarized()
 ```
 
-## position effects
-```{r }
+
+```{r , include = F}
 pos_plot <- data %>%
   filter(phase == 'test')%>%
   group_by(pickPos,subid) %>%
@@ -452,8 +486,8 @@ ggplot() +
   scale_color_solarized()
 ```
 
-## trial effects
-```{r proportion of choices}
+
+```{r , include = F}
 trial_plot <- data %>%
   filter(phase == 'test')
 
@@ -468,8 +502,8 @@ ggplot(data = trial_plot, aes(x = trial, y = correct_target1)) +
   scale_color_solarized()
 ```
 
-# one sample wilcoxon
-```{r}
+
+```{r, include = F}
 
 # Based on: http://ipg.idsia.ch/preprints/benavoli2014a.pdf
 source("../scripts/isignrank.test.R")
