--- a/analysis/02_kids_6v1.Rmd
+++ b/analysis/02_kids_6v1.Rmd
@@ -111,6 +111,26 @@ data <- data %>%
   filter(!subid %in% drop)
 ```
 
+```{r}
+#clean data file for repo
+data_ex2 <- data %>%
+  filter(phase == "test")%>%
+  mutate(correct = ifelse(correct_target1 == "1", 1, 0),
+         condition = ifelse(distribution == "6-0-0", "high_input", "low_input"),
+         target_category = target1, 
+         picked_category = pickCat,
+         experiment = "variable_input", 
+         speaker = agent,
+         id = paste0("part_",as.numeric(as.factor(subid))),
+         id = paste(id, experiment, sep = "_"),
+         age_group = subage)%>%
+  select(id, age_group,age_num,sex,experiment,trial,condition, speaker, target_category, picked_category,correct)
+
+
+write_csv(data_ex2, path="../data/data_ex2.csv")
+```
+
+
 # Participants
 
 ```{r}
@@ -149,18 +169,17 @@ ggplot() +
 ```{r proportion of choices}
 p1 <- data %>%
   filter(phase == 'test')%>%
-  group_by(subage, distribution,subid) %>%
-  summarise(correct = mean(correct_target1),
-            sd = sd(correct_target1)) 
+  group_by(experiment,subid) %>%
+  summarise(correct = mean(correct_target1))
 
 p2 <- p1 %>%
-  group_by(subage,distribution) %>%
+  group_by(experiment) %>%
   multi_boot_standard(col = "correct")
 
 
 ggplot() +
-  geom_jitter(data = p1, aes(x = distribution, y = correct, col = subage), alpha = .2 ,width = .2,height = .01)+
-  geom_pointrange(data = p2, aes(x = distribution, y = mean,  ymin = ci_lower, ymax = ci_upper, col = subage),size = .8, position = position_dodge(width = .5))+
+  geom_jitter(data = p1, aes(x = experiment, y = correct, col = experiment), alpha = .2 ,width = .2,height = .01)+
+  geom_pointrange(data = p2, aes(x = experiment, y = mean,  ymin = ci_lower, ymax = ci_upper, col = experiment),size = .8, position = position_dodge(width = .5))+
   geom_hline(yintercept = 1/3, lty=2)+
   labs(x="",y="Proportion correct")+
   theme_few() +
@@ -168,6 +187,10 @@ ggplot() +
   guides(alpha = F)+
   scale_color_solarized()
 ```
+
+
+
+
 
 # Proportion correct choice by age continous
 
@@ -201,10 +224,12 @@ model_data <- data%>%
 #   model
 
 kbm1 <- brm(correct_target1 ~ age_num * distribution +
-                      (distribution| subid) + (distribution | target1),
+                      (distribution| subid),
                     data = model_data, family = bernoulli(),
-          control = list(adapt_delta = 0.95),
+          control = list(adapt_delta = 0.99),
           sample_prior = F,
+          chains = 4, 
+          cores = 4, 
           save_all_pars = TRUE,
           iter = 2000)
 
@@ -216,17 +241,35 @@ bayesplot::mcmc_areas(as.array(kbm1), pars = c("b_Intercept", "b_age_num", "b_di
   geom_vline(xintercept = 0, lty = 2, col = "black")+
   theme_few()
 ```
-
 ```{r, include = F}
-kbm2 <- brm(correct_target1 ~ age_num +
-                      (distribution| subid) + (distribution | target1),
+#   model
+
+kbm2 <- brm(correct_target1 ~ age_num + distribution +
+                      (distribution| subid),
                     data = model_data, family = bernoulli(),
           control = list(adapt_delta = 0.99),
           sample_prior = F,
+          chains = 4, 
+          cores = 4, 
           save_all_pars = TRUE,
           iter = 2000)
 
 summary(kbm2)
+```
+
+
+```{r, include = F}
+kbm3 <- brm(correct_target1 ~ age_num +
+                      (distribution| subid),
+                    data = model_data, family = bernoulli(),
+          control = list(adapt_delta = 0.99),
+          sample_prior = F,
+          chains = 4, 
+          cores = 4, 
+          save_all_pars = TRUE,
+          iter = 2000)
+
+summary(kbm3)
 ```
 
 
@@ -298,14 +341,15 @@ ggplot() +
 ## trial effects
 ```{r proportion of choices}
 trial_plot <- data %>%
-  filter(phase == 'test')
+  filter(phase == 'test')5
 
-ggplot(data = trial_plot, aes(x = trial, y = correct_target1)) +
+ggplot(data = trial_plot, aes(x = trial, col = distribution,  y = correct_target1)) +
   geom_jitter(alpha = .2,width = .2,height = .01)+
-  geom_smooth(method = "loess",  se = T, size = 1, col = "darkred", fill = "darkgreen", alpha = .5 )+
+  geom_smooth(method = "loess",  se = T, size = 1, alpha = .5 )+
   geom_hline(yintercept = 1/3, lty=2)+
   labs(x="",y="Proportion correct")+
   theme_few() +
+  #facet_grid(~subage)+
   ylim(-0.05,1.05)+
   guides(alpha = F)+
   scale_color_solarized()
